# secrez-rust-lib

./: .gitignore  .npmignore  .travis.yml  README.md  package.json  pnpm-lock.yaml
lib/: index.js
native/: Cargo.toml  artifacts.json  index.node
native/src/: crypt.rs  lib.rs
test/: index.test.js
