[package]
name = "rust-lib"
version = "0.0.1"
authors = ["Francesco Sullo <sullof@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
neon = "0.7.1"
sodiumoxide = "0.2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
bs58 = "0.4.0"
